# ProjectX

./: .env  .env.example  Cargo.toml  ProjectX.sln  docker-compose.yml
.github/workflows/: deploy-web.yml  projectx-identity.yml  projectx-web  projectx-web.yml
.github/workflows/pipelines/: projectx-identity.yml
dapr/components/: pubsub.rabbitmq.yaml  state.yaml
dapr/configuration/: config.yaml
infastructure/terraform/: container_app.tf  container_app_dapr_components.tf  container_app_environment.tf  container_registry.tf  provider.tf  random_uuid.tf  resource_group.tf  variables.tf  virtual_network.tf
migrations/: 20260421065640_user_table.sql  20260515164736_tables.up.sql  20260515164736_user_table.down.sql  20260515164736_user_table.up.sql  20260520184450_seed_roles.sql  20260527165528_seed_roles.down.sql  20260527165528_seed_roles.up.sql
services/identity/: Cargo.toml  build.rs
services/identity/src/: main.rs
services/identity/src/repositories/: user.rs
services/identity/src/services/: auth.rs  mod.rs  user.rs
services/identity/src/state/: app_state.rs
services/identity/src/utils/: auth.rs  error.rs
services/web/: Cargo.toml  Dockerfile  build.rs
services/web/src/: config.rs  error.rs  health.rs  main.rs  socket.rs  state.rs
services/web/src/endpoints/: auth.rs  doc.rs  health.rs  metrics.rs  mod.rs  passkey.rs  user.rs
services/web/src/extractor/: auth.rs  mod.rs  role.rs  validated.rs
services/web/src/middlewares/: auth.rs
services/web/src/models/: user.rs
services/web/src/models/identity/: user.rs
services/web/src/models/users/: mod.rs  passkey.rs  refresh.rs  register.rs  signin.rs  user.rs
services/web/src/repositories/: mod.rs  passkey.rs  provider.rs  session.rs  user.rs
services/web/src/services/: mod.rs  passkey.rs  session.rs  user.rs
services/web/src/utils/: cookie.rs  jwt.rs  mod.rs  password.rs  redis.rs  token.rs
shared/domain/: Cargo.toml
shared/domain/src/common/: response.rs
shared/domain/src/entities/users/: challenge.rs  mod.rs  passkey.rs  provider.rs  session.rs  user.rs
shared/protos/: auth.proto  user.proto
src/ProjectX.Identity/: Dockerfile  Program.cs  ProjectX.Identity.csproj
src/ProjectX.Identity/Properties/: launchSettings.json
src/ProjectX.Web/: Dockerfile  Program.cs  ProjectX.Web.csproj
src/ProjectX.Web/Properties/: launchSettings.json
