[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow ={ workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true}
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
