[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow ={ workspace = true }
axum = { workspace = true }
prost = { workspace = true }
scalar_api_reference = { version = "0.2.2", features = ["axum"] }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
domain = { path = "../../shared/domain" }
tower = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
tracing-opentelemetry = "0.32.1"
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = { workspace = true}
sysinfo = { workspace = true}
jsonwebtoken = { workspace = true }
sqlx = { workspace = true}
async-trait = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true}
utoipa-scalar = { workspace = true }
utoipa = { workspace = true}
thiserror = { workspace = true}
validator = { workspace= true }
argon2 = { workspace = true}
axum-extra = { workspace = true}
cookie = { workspace = true}

[build-dependencies]
tonic-prost-build = { workspace = true }
