[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
domain = { path = "../../shared/domain" }
tower = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = { workspace = true }
sysinfo = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
cookie = { workspace = true }
tokio-tungstenite = { workspace = true }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
tower-sessions = "0.15.0"
redis = { workspace = true }
base64 = "0.22.1"
deadpool-redis = { workspace = true }

[build-dependencies]
